autumn 7 days trip
autumn 7 days trip

--- a/index.html
+++ b/index.html
@@ -300,13 +300,13 @@
             <div class="tour-col">
               <img loading="lazy" src="images/7-days-tour.jpg" alt="" />
               <h4>
-                經典七天 罌粟花海 &nbsp; &nbsp; &nbsp; &nbsp;<span
+                經典七天 秋日楓葉 &nbsp; &nbsp; &nbsp; &nbsp;<span
                   class="tours-date"
                 ></span>
               </h4>
               <div class="tour-days">
                 <i class="fa fa-location-arrow"></i>
-                <p>Poppy Blossom</p>
+                <p>7 Days Trip</p>
                 <div class="testimonial-starts-tour">
                   <i class="fa fa-star"></i>
                   <i class="fa fa-star"></i>
