--- a/seven-days-tour.html
+++ b/seven-days-tour.html
@@ -71,14 +71,16 @@
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
       </nav>
-      <h1>7 Days Poppy Blossom</h1>
+      <h1>7 days Autumn trip</h1>
     </section>
 
     <!---------- Tour gallery ----------->
 
     <section class="tour-section">
       <div class="gallery-container">
-        <h1>經典七天 罌粟花海</h1>
+        <h1>經典七天 秋日楓葉</h1>
+
+       
 
         <div class="gallery">
           <a class="box a" href="images-7-day-tour-section/arashan-1.jpg">
@@ -90,11 +92,11 @@
             />
           </a>
 
-          <a class="box b" href="images-7-day-tour-section/poppy-flower.jpg">
+          <a class="box b" href="images-7-day-tour-section/arashan-horse.jpg">
             <img
               loading="lazy"
               class="second-photo"
-              src="images-7-day-tour-section/poppy-flower.jpg"
+              src="images-7-day-tour-section/arashan-horse.jpg"
               alt=""
             />
           </a>
@@ -201,9 +203,9 @@
                       <p>Date</p>
                     </div>
                     <div class="info-item-cont">
-                      <p class="date-month">April 28 - May 6</p>
+                      <p class="date-month">Sep Oct Nov</p>
 
-                      <p>May 12 - May 19</p>
+                      <p></p>
                     </div>
                   </div>
                 </li>
@@ -233,31 +235,24 @@
         <div class="description-highlights">
           <div class="description">
             <h3>拼團資訊：</h3>
-            <h4>每團6-12人，一個人也可以參加，每人費用1680 美金</h4>
-            <h4>日期：April 28/ May 12</h4>
+            <h4>每團6-12人，一個人也可以參加，每人費用1780 美金</h4>
+            <h4>日期： Oct 5</h4>
           </div>
           <div class="description">
             <h3>私人訂製團：</h3>
             <h4>2人以上可包團，詳情請 <a href="contact.html">@mail</a></h4>
-            <h4>日期：April 20-May 30 隨時出發</h4>
+            <h4>日期：Sep-Nov 隨時出發</h4>
           </div>
 
           <div class="highlights">
             <h2>Highlights</h2>
             <ul class="highlights-ul">
-              <li>罌粟花海行程亮點：</li>
-              <li>罌粟花盛開：</li>
-              <li>欣賞壯觀的罌粟花田盛開，令人驚嘆的自然美景。</li>
-              <li>入住蒙古包：</li>
-              <li>
-                體驗科克賈伊克草原上的傳統吉爾吉斯蒙古包的魅力與熱情款待。
-              </li>
-              <li>鷹獵與地毯表演：</li>
-              <li>欣賞令人著迷的鷹獵表演以及傳統地毯編織展示。</li>
-              <li>伊塞克湖遊船：</li>
-              <li>乘坐遊船，悠閒地欣賞壯美的伊塞克湖風光。</li>
-              <li>喬爾蓬阿塔俄羅斯市場：</li>
-              <li>探索僅在週六和週日開放的俄羅斯市場，享受獨特的購物體驗。</li>
+              <li>行程亮點：：</li>
+              <li>繽紛樹葉結合湖泊風光與壯麗山景</li>
+              <li>入住蒙古包：體驗科克賈伊克草原上的傳統吉爾吉斯蒙古包的魅力與熱情款待。</li>
+              <li>鷹獵與地毯表演：欣賞令人著迷的鷹獵表演以及傳統地毯編織展示。</li>
+              <li>伊塞克湖遊船：乘坐遊船，悠閒地欣賞壯美的伊塞克湖風光。</li>
+              <li>喬爾蓬阿塔俄羅斯市場：探索僅在週六和週日開放的俄羅斯市場，享受獨特的購物體驗。</li>
             </ul>
           </div>
         </div>
@@ -315,7 +310,7 @@
                 <div class="about-tour-col">
                   <img
                     loading="lazy"
-                    src="image-itinerary/chunkurchak-poppy.png"
+                    src="image-itinerary/1 chunkurchak.jpeg"
                   />
                 </div>
 
@@ -325,9 +320,7 @@
                       On the first day, after breakfast, you will embark on a
                       city tour of Bishkek, known for its blend of Soviet-era
                       architecture and natural surroundings. For lunch we will
-                      go to Chunkurchak, on the way, we will stop to enjoy the
-                      beauty of the poppy blossoms. And then we will continue
-                      our way to Chunkurchak, where you can explore the Supara
+                      go to Chunkurchak where you can explore the Supara
                       Ethno Complex. Here, you’ll relax in the beautiful
                       surroundings and taste traditional dishes. And on the way
                       back, we will stop at the Sky Bridge to admire the
