--- a/classic-eight-days.html
+++ b/classic-eight-days.html
@@ -666,7 +666,7 @@
                     </p>
                     <div class="overnight">
                       <i class="fa fa-home"></i>
-                      <p>Overnight: Olimp hotel</p>
+                      <p>Overnight: Crown Hotel 4* or Freedom hotel / My hotel</p>
                     </div>
                   </div>
                 </div>
