--- a/classic-eight-days.html
+++ b/classic-eight-days.html
@@ -914,12 +914,14 @@
               </li>
 
               <li>
-                本行程可延長住宿天數， 代訂Bishkek Freedom Hotel <br />
+                本行程可延長住宿天數， 代訂Bishkek Freedom Hotel or Crown hotel <br />
                 一晚雙床房 80美金。 建議提早一天到。可以休息一下也能市區bazaar
                 <br />
-                逛逛， 隔天開始充實的七天行程， <br />
-                行程最後一天，約傍晚5-7點結束會送大家回飯店休息， <br />
-                行程包含七天住宿。
+                逛逛， 隔天開始充實的
+                八天行程， <br />
+                行程最後一天，約傍晚 9 點結束會送大家回飯店休息， <br />
+                行程包含
+                八天住宿。
               </li>
 
               <li>
