--- a/index.html
+++ b/index.html
@@ -496,32 +496,22 @@
       </div>
     </section>
 
-  
-
-
-     <!---------- Testimonial section  ----------->
+    <!---------- Testimonial section  ----------->
     <section class="testimonial-container">
-
       <div class="testimonial-title">
-         <h1>客人分享</h1>
-         <p>Client Feedback</p>
+        <h1>客人分享</h1>
+        <p>Client Feedback</p>
       </div>
-
-     
 
       <div class="testimonial-c-2 mySwiper">
         <div class="testi-content swiper-wrapper">
-
           <div class="testimonial-slide swiper-slide">
-            <img
-              src="testimonial/G.png"
-              alt=""
-              class="testimonial-img"
-            />
+            <img src="testimonial/G.png" alt="" class="testimonial-img" />
             <p>
               其實出發之前我完全不了解吉爾吉斯這個國家（俗稱沒有做功課），只是衝著一種「不跟朋友一起去的話，一輩子我都不會去這地方」的想法，出發之前一直覺得會到一個很落後很可怕的地方，擔心高山症擔心生病，完全是硬著頭皮參加這次旅行。
               抵達之後雖然也是發生很多意外（團員的行李箱被航空公司摔壞、洗澡沒熱水、腸胃炎），但吉爾吉斯大自然美麗的風光、當地人民的友善熱情以及見證一個國家發展中的歷程，種種都非常有趣，打破我原本的刻板印象，讓我愛上這個國家！
-              非常謝謝Ruby用心的安排，小五熱忱的服務，司機大哥專業的技術，貝殼媽媽家豐盛美味的晚餐，希望還有機會在這片土地上相見 ❤️
+              非常謝謝Ruby用心的安排，小五熱忱的服務，司機大哥專業的技術，貝殼媽媽家豐盛美味的晚餐，希望還有機會在這片土地上相見
+              ❤️
             </p>
 
             <i class="bx bxs-quote-alt-left quote-icon"></i>
@@ -533,21 +523,12 @@
           </div>
 
           <div class="testimonial-slide swiper-slide">
-            <img
-              src="testimonial/L.png"
-              alt=""
-              class="testimonial-img"
-            />
+            <img src="testimonial/L.png" alt="" class="testimonial-img" />
             <p>
-              中亞小瑞士喜歡
-              日本人的木屋喜歡
-              食物也喜歡（這大概是我10年分的香菜和甜椒青椒）
-              老鷹表演喜歡
-              騎馬喜歡
-              住吉爾吉斯包喜歡
-              頌湖喜歡
-              伊賽克湖遊湖喜歡
-              ....太多了～ <br>
+              中亞小瑞士喜歡 日本人的木屋喜歡
+              食物也喜歡（這大概是我10年分的香菜和甜椒青椒） 老鷹表演喜歡
+              騎馬喜歡 住吉爾吉斯包喜歡 頌湖喜歡 伊賽克湖遊湖喜歡 ....太多了～
+              <br />
 
               Bek媽媽的晚宴超級超級超級喜歡（最喜歡跟當地人交流，也很喜歡這樣的表演和文化交流）手比愛心～
             </p>
@@ -561,11 +542,7 @@
           </div>
 
           <div class="testimonial-slide swiper-slide">
-            <img
-              src="testimonial/M-tes.png"
-              alt=""
-              class="testimonial-img"
-            />
+            <img src="testimonial/M-tes.png" alt="" class="testimonial-img" />
             <p>
               騎馬與吉爾吉斯包的體驗令人永生難忘，兩小時內的景致就有不同的變化，是個很豐富的體驗。另沒有網路的地方很多，也令人滿意🤭
             </p>
@@ -579,11 +556,7 @@
           </div>
 
           <div class="testimonial-slide swiper-slide">
-            <img
-              src="testimonial/C.png"
-              alt=""
-              class="testimonial-img"
-            />
+            <img src="testimonial/C.png" alt="" class="testimonial-img" />
             <p>
               自從在IG上看到一位攝影師分享的吉爾吉斯影片，這個國家在我心裡就有著特別的印象，實際走訪當地，這裡不只風景美麗，人也很友善熱情，在這裡感受到滿滿的幸福感
             </p>
@@ -597,14 +570,15 @@
           </div>
 
           <div class="testimonial-slide swiper-slide">
-            <img
-              src="testimonial/L.png"
-              alt=""
-              class="testimonial-img"
-            />
+            <img src="testimonial/L.png" alt="" class="testimonial-img" />
             <p>
-              感受得到導遊的專業度和貼心，常常看到Elaman、Altyn和Tao在檢查車子狀況，讓我們的off road之旅備感安心，我們在山上的幾天天氣都不好，住宿地點外地面常是泥濘／雪的狀態，我有注意到三位導遊都是直接幫我們把行李“扛”到帳篷或屋內，避免行李箱輪子沾到泥巴，雖然對三位導遊很不好意思，但這種注意細節的貼心協助，會讓我這個龜毛的人感覺很舒服。在騎馬到Kel-Suu 的時候我是有點擔心安全性，畢竟不久前才聽說有台灣人在Song-Kul 摔馬，而且我們出發時一直有雨，在Kel-Suu 甚至是雨冰一起下，還好導遊有提供我們頭盔、雨衣和手套，而且都蠻乾淨的，沒有異味或髒污，途中三位導遊也一直留意我們騎行的狀態，安全性讓人放心，但最後因為下半身衣物全濕，還是有失溫的情形
-              雖然我們這次來花況和天氣不好，但三位導遊的用心彌補了這些缺憾，感謝Altyn 的貼心服務，她很用心幫我們照顧兩位長輩，我特別喜歡她跟我們分享吉爾吉斯人生活的部分，感謝Elaman努力維護並和我們分享吉爾吉斯傳統技藝及文化，這也讓我很感動，我們和Anne聽到“當地人手工製作”還有了解這些美麗的工藝就很容易失心瘋；Tao是我們大家的開心果，每天都讓大家開懷大笑，而且他細心又愛護大自然，我們大家都很喜歡他，希望有機會帶他們三位來台灣玩
+              感受得到導遊的專業度和貼心，常常看到Elaman、Altyn和Tao在檢查車子狀況，讓我們的off
+              road之旅備感安心，我們在山上的幾天天氣都不好，住宿地點外地面常是泥濘／雪的狀態，我有注意到三位導遊都是直接幫我們把行李“扛”到帳篷或屋內，避免行李箱輪子沾到泥巴，雖然對三位導遊很不好意思，但這種注意細節的貼心協助，會讓我這個龜毛的人感覺很舒服。在騎馬到Kel-Suu
+              的時候我是有點擔心安全性，畢竟不久前才聽說有台灣人在Song-Kul
+              摔馬，而且我們出發時一直有雨，在Kel-Suu
+              甚至是雨冰一起下，還好導遊有提供我們頭盔、雨衣和手套，而且都蠻乾淨的，沒有異味或髒污，途中三位導遊也一直留意我們騎行的狀態，安全性讓人放心，但最後因為下半身衣物全濕，還是有失溫的情形
+              雖然我們這次來花況和天氣不好，但三位導遊的用心彌補了這些缺憾，感謝Altyn
+              的貼心服務，她很用心幫我們照顧兩位長輩，我特別喜歡她跟我們分享吉爾吉斯人生活的部分，感謝Elaman努力維護並和我們分享吉爾吉斯傳統技藝及文化，這也讓我很感動，我們和Anne聽到“當地人手工製作”還有了解這些美麗的工藝就很容易失心瘋；Tao是我們大家的開心果，每天都讓大家開懷大笑，而且他細心又愛護大自然，我們大家都很喜歡他，希望有機會帶他們三位來台灣玩
             </p>
 
             <i class="bx bxs-quote-alt-left quote-icon"></i>
@@ -616,14 +590,8 @@
           </div>
 
           <div class="testimonial-slide swiper-slide">
-            <img
-              src="testimonial/L-2.png"
-              alt=""
-              class="testimonial-img"
-            />
-            <p>
-             很特別的一趟旅遊，吉爾吉斯景色真的很美
-            </p>
+            <img src="testimonial/L-2.png" alt="" class="testimonial-img" />
+            <p>很特別的一趟旅遊，吉爾吉斯景色真的很美</p>
 
             <i class="bx bxs-quote-alt-left quote-icon"></i>
 
@@ -633,14 +601,11 @@
             </div>
           </div>
 
-           <div class="testimonial-slide swiper-slide">
-            <img
-              src="testimonial/L-2.png"
-              alt=""
-              class="testimonial-img"
-            />
+          <div class="testimonial-slide swiper-slide">
+            <img src="testimonial/L-2.png" alt="" class="testimonial-img" />
             <p>
-             Horse riding to Kol-suu lake in the rain , its extremely COLD , but unforgettable life experience
+              Horse riding to Kol-suu lake in the rain , its extremely COLD ,
+              but unforgettable life experience
             </p>
 
             <i class="bx bxs-quote-alt-left quote-icon"></i>
@@ -651,17 +616,9 @@
             </div>
           </div>
 
-
-
           <div class="testimonial-slide swiper-slide">
-            <img
-              src="testimonial/L-2.png"
-              alt=""
-              class="testimonial-img"
-            />
-            <p>
-             很特別的一趟旅遊，吉爾吉斯景色真的很美
-            </p>
+            <img src="testimonial/L-2.png" alt="" class="testimonial-img" />
+            <p>很特別的一趟旅遊，吉爾吉斯景色真的很美</p>
 
             <i class="bx bxs-quote-alt-left quote-icon"></i>
 
@@ -756,11 +713,7 @@
           </div>
 
           <div class="testimonial-slide swiper-slide">
-            <img
-              src="testimonial/M-tes.png"
-              alt=""
-              class="testimonial-img"
-            />
+            <img src="testimonial/M-tes.png" alt="" class="testimonial-img" />
             <p>
               Your tour made me fall in love with Kyrgyzstan! The landscapes at
               Son-Kol took my breath away, and staying in a yurt was so cozy and
@@ -1151,8 +1104,6 @@
         <button class="btn btn-primary btn-lg">Read All Blogs</button>
       </a>
     </div>
-
-    
 
     <!---------- Our Partners----------->
     <section class="our-partners-section">
